--- a/{{cookiecutter.project_directory}}/.github/workflows/deploy_dev_lambda_api_{{cookiecutter.lambda_name}}.yaml
+++ b/{{cookiecutter.project_directory}}/.github/workflows/deploy_dev_lambda_api_{{cookiecutter.lambda_name}}.yaml
@@ -21,9 +21,8 @@ jobs:
       run: |
         apt-get update && apt-get install -y zip
         ./build_lambda_zip.sh
-    - name: Set commit message to an environment variable
-      run: echo ::set-env name=commit_msg::$(git log --format=%B -n 1 ${{ github.event.after }})
     - name: Deploy {{cookiecutter.lambda_file_name}}.py for Dev
+      {% raw %}
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -34,3 +33,4 @@ jobs:
         config=$(aws lambda get-function-configuration --function-name "${FUNCTION_NAME}")
         version=$(aws lambda update-function-code --function-name "${FUNCTION_NAME}" --zip-file fileb://function.zip --publish | jq -r .Version)
         aws lambda update-alias --function-name "${FUNCTION_NAME}" --name "${ALIAS_NAME}" --function-version "${version}"
+      {% endraw %}
