--- a/{{cookiecutter.project_directory}}/pytest.ini
+++ b/{{cookiecutter.project_directory}}/pytest.ini
@@ -2,5 +2,5 @@
 env =
     # Set environment variable needed for project.
     # Example:
-    # D:MYSQL_CLUSTERING_HOST=localhost
+    # D:MYSQL_HOST=localhost
 addopts = --cov=.
